css/main.css
/* elements */
h1,h2,h3,h4,h5,h6 {
	text-shadow: 0px 0px 1px rgba(200, 200, 200, 0.1);
}
a {
	font-weight: bold;
    color: #38530f;
	text-shadow: 0px 0px 1px rgba(200, 200, 200, 0.1);
	font-size: 1.05em;
}
a:hover {
    color: #62831f;
}
/*ul {
	list-style-image:url('../images/dot.png');
}
*/
ul.nodot, li.nodot {
	list-style: none;
	margin-left: 0;
}
/* default page structure */
.navbar {
	font-family: Roboto;
	text-rendering: optimizelegibility;
}
.navbar .brand {
	padding: 6px;
	display: flex;
	align-items: center;
}
.navbar .nav > li > a {
	color: #666;
}
.navbar-inner {
	background-color: #FFFFFE;
	background-image: none;
	-webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.15);
	box-shadow: 0 1px 1px rgba(0, 0, 0, 0.15);
}
.navbar a.brand {
	text-decoration: none;
	margin-right: 13px;
	color: #666;
	font-size: 26px;
	font-weight: bold;
}
a.brand img {
	padding-right: 10px;
}
.navbar .badges iframe {
	padding: 20px 0 0 0;
	vertical-align: baseline;
}

.content {
	min-height: 500px;
}

/*  inset center area */
.container-narrow {
    width: 60%;
    margin: 0 auto;
    display: flex;
    flex-wrap: wrap;
}
/* content area has margin */
.main.container-narrow {
    margin: 1em auto;
}


.nav-tabs>li>a {
	line-height: inherit;
}
.nav-tabs {
	font-size: 13px;
}
.nav-tabs a.active {
	background: #666;
	color: #eee;
}
.nav-tabs a.active:hover {
	background: #333;
	color: #eee;
}
footer {
	font-size: 10px;
}
footer a.edit-link {
	float: right;
	text-decoration: none;
}


/* front page */
.jumbotron {
  margin: 0 60px;
}
.jumbotron h1 {
	margin: 2em 0 1em 0;
	font-size: 4em;
}
.jumbotron p {
	font-size: 1.1em;
	line-height: 1.5em;
	margin-bottom: 2em;
}
.list_heading {
    list-style: none;
}
.book img {
	margin: 10px;
}
.book blockquote {
	margin: 1em 10px;
	font-size: 0.9em;
	border: 0;
}
#features ul {
	font-size: 0.9em;
}
/*
#download {
	background: #f8f9e9;
	background: #fff;
	-webkit-box-shadow: 0 0 8px rgba(0, 0, 0, 0.115);
	-moz-box-shadow: 0 0 2px rgba(0, 0, 0, 0.115);
	box-shadow: 0 0 6px rgba(0, 0, 0, 0.115);
	padding: 1em;
	margin: 2em 0;
}
#download p {
	margin-left: 1em;
	font-size: 0.9em;
}
*/

/*  sc code highlighting */
/* overide bootstrap box */
pre {
	background-color: inherit;
	border: 0;
}
pre code {
	background: #fdfdfc;
	-webkit-box-shadow: inset 0 0 8px rgba(0, 0, 0, 0.115);
	-moz-box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.115);
	box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.115);
}
code span.string {
    color: #229922;
}
code span.nx {
    color: #031e9f;
}
code span.comment {
	color: #c83917;
	font-style: normal;
}


.main-page-examples code {
    max-height: 20em;
    overflow: auto;
}

/* responsive */
@media (max-width: 1150px) {
	.navbar .container-narrow {
		width: 80%;
	}
}
@media (max-width: 920px) {
	body {
		padding-left: 10px;
		padding-right: 10px;
	}
    .container-narrow {
        width: 100%;
        margin: 0;
    }
    .main.container-narrow {
        padding: 1em;
    }
	.navbar-inner .container-narrow {
		padding: 0;
	}
	.navbar .nav > li > a {
		padding: 5px 10px;
	}
	.navbar .badges iframe {
		padding: 5px 0;
	}
    .jumbotron h1 {
    	font-size: 2.5em;
    	margin: 0 0 20px 0;
    }
}

ul.callstoaction li {
	display: inline-block;
	margin-left: 30px;
}

ul.callstoaction li:before {
	content: "• ";
}

